fix(VDialog): prevent scrollable dialog content from being cut off in IE
Fixes #2654

--- a/src/stylus/components/_dialogs.styl
+++ b/src/stylus/components/_dialogs.styl
@@ -47,7 +47,6 @@
 
   &--scrollable
     display: flex
-    overflow: hidden
 
     >
       .card
